Add favorite parishes feature for users
Introduced functionality to manage user's favorite parishes, including adding or removing favorites and retrieving all favorites. Updated Parish and User entities, modified controllers, and created related services and commands to support the feature.